qs
部分深度优化 + 加了点面试题